--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,8 +40,10 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.android.support:support-v4:+'
     implementation 'com.android.support:recyclerview-v7:+'
+    implementation 'com.cepheuen.elegant-number-button:lib:1.0.2'
     //noinspection GradleCompatible
     implementation 'com.android.support:recyclerview-v7:21.0.+'
+    implementation 'com.google.firebase:firebase-auth:18.1.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
