--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,10 +13,20 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".AdminProductDetailsActivity"></activity>
+        <activity android:name=".AdminShowAllProductActivity" />
+        <activity android:name=".UserOrderActivity" />
+        <activity android:name=".VerificationCodeActivity" />
+        <activity android:name=".MobileNumberForRegistrationActivity" />
+        <activity android:name=".AdminUserProductActivity" />
+        <activity android:name=".AdminNewOrdersActivity" />
+        <activity android:name=".ConfirmFinalOrder" />
+        <activity android:name=".CartActivity" />
+        <activity android:name=".ProductDetailsActivity" />
         <activity
             android:name=".HomeActivity"
             android:label="@string/title_activity_home"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".AdminCategoryAdtivity" />
         <activity android:name=".AdminAddNewProductActivity" />
         <activity android:name=".RegisterActivity" />
